--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             </p>
                         </div>
 
-                        <a href="hhttps://sarahperrin10.github.io/finalproject/" class="item-folio__project-link" title="Project link">
+                        <a href="https://sarahperrin10.github.io/finalproject/" class="item-folio__project-link" title="Project link">
                             Project Link
                         </a>
 
